<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_tree_days_forecast"
            android:icon="@drawable/ic_nav_sunny"
            android:title="@string/nav_item_tree_days_forecast" />
        <item
            android:id="@+id/nav_week_forecast"
            android:icon="@drawable/ic_nav_cloud"
            android:title="@string/nav_item_week_forecast" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_nav_favorite_edit"
            android:title="@string/nav_item_favorite" />
    </group>

    <item android:title="@string/nav_add">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_settings"
                android:title="@string/nav_item_settings" />
            <item
                android:id="@+id/nav_about_mistake"
                android:icon="@drawable/ic_nav_mail"
                android:title="@string/nav_item_about_mistake" />
        </menu>
    </item>
</menu>
